session-12-ingress-configmaps-secrets/24BCS10267-ujjawal-prabhat/05-troubleshooting/broken/01-app-db-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: db-client
  namespace: s12
spec:
  restartPolicy: Never
  containers:
    - name: psql
      image: postgres:16-alpine
      command: ["sh", "-c", "psql -h pg -U yatri_admin -d postgres -c 'select current_user, version();'"]
