session-12-ingress-configmaps-secrets/24BCS10267-ujjawal-prabhat/05-troubleshooting/broken/02-ingress-wrong-class.yaml
# BROKEN: ingressClassName refers to a class that does not exist in the cluster
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wrong-class
  namespace: s12
spec:
  ingressClassName: nginx-internal
  rules:
    - host: class.24bcs10267.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: app-a, port: { number: 80 } }
